syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package gitlab.agent.notifications.rpc;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/v16/internal/module/notifications/rpc";

import "validate/validate.proto";
import "pkg/event/event.proto";

message GitPushEventRequest {
  event.GitPushEvent event = 1 [(validate.rules).message.required = true];
}

message GitPushEventResponse {
}

// Service to send notifications to KAS
service Notifications {
  // Emit a git push event
  // This may be a tag, branch or commit
  rpc GitPushEvent (GitPushEventRequest) returns (GitPushEventResponse) {
  }
}
